# omnimotion-patches

./: .gitmodules  pyproject.toml
omnimotion/: train.py  trainer.py  viz.py
omnimotion/networks/: mfn.py  nvp_simplified.py
omnimotion/preprocessing/: chain_raft.py  exhaustive_raft.py  extract_dino_features.py  filter_raft.py  get_davis.py  main_processing.py
