[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "omnimotion"
version = "2023.09.11"
dependencies = [ "raft", "dino" ]

[project.scripts]
omnimotion-train = "omnimotion.train:main"
omnimotion-viz = "omnimotion.viz:main"
omnimotion-preprocess-main = "omnimotion.preprocessing.main_preprocessing:main"
omnimotion-preprocess-chain-raft = "omnimotion.preprocessing.chain_raft:main"
omnimotion-preprocess-exhaustive-raft = "omnimotion.preprocessing.exhaustive_raft:main"
omnimotion-preprocess-filter-raft = "omnimotion.preprocessing.filter_raft:main"
omnimotion-preprocess-extract-dino = "omnimotion.preprocessing.extract_dino_features:main"
omnimotion-preprocess-get-davis = "omnimotion.preprocessing.get_davis:main"

[tool.setuptools.packages]
find = {}
